# quantum-lab

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: circuit-reviewer.md  quantum-researcher.md  quantum-tutor.md
.claude/skills/explain-concept/: SKILL.md
.claude/skills/new-experiment/: SKILL.md
.claude/skills/run-circuit/: SKILL.md
app/: Home.py
app/components/: ui.py
app/pages/: 1_Circuit_Builder.py  2_Simulator.py  3_Algorithm_Gallery.py  4_Backends.py  5_Experiments.py  6_Learn.py
docs/: GLOSSARY.md  ROADMAP.md  providers.md
notebooks/: 00_setup_check.ipynb  01_hello_qubit.ipynb  02_entanglement_bell.ipynb  03_grover_intro.ipynb
quantumlab/: __init__.py  backends.py  circuits.py  config.py  curriculum.py  profile.py  run.py  setup_check.py  viz.py
requirements/: braket.txt  cirq.txt  core.txt  dwave.txt
scripts/: setup.sh
tests/: test_circuits.py
